edit files and add imges

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             <div class="links">
                 <div class="main-nav-links">
                     <a href="#About">About</a>
-                    <a href="#">Skills</a>
-                    <a href="#">Qualification</a>
+                    <a href="#Skills">Skills</a>
+                    <a href="#Qualification">Qualification</a>
                     <a href="#">Certificate</a>
                     <a href="#">Contact Me</a>
                 </div>
@@ -43,20 +43,95 @@
             </a>
             <ul>
                 <li><a href="#About"> About</a></li>
-                <li><a href="#About">Skills</a></li>
-                <li><a href="#">Qualification</a></li>
+                <li><a href="#Skills">Skills</a></li>
+                <li><a href="#Qualification">Qualification</a></li>
                 <li><a href="#">Certificate</a></li>
                 <li><a href="#">Contact Me</a></li>
             </ul>
         </nav>
         <section id="About">
             <div class="text">
-                <h1> About </h1>
+                <h1> About Me </h1>
                 <p>I am a person who has a great passion for learning programming from a young age and my life's dream
                     is to be a great programmer.</p>
             </div>
             <div class="img2">
 
+            </div>
+        </section>
+        <section id="Skills">
+            <div class="main-subject">
+                <h1>Skills</h1>
+            </div>
+            <div class="soft-skills">
+                <div class="soft">
+                    <p>team work</p>
+                </div>
+                <div class="soft">
+                    <p>ORGANIZATION</p>
+                </div>
+                <div class="soft">
+                    <p>Fixable</p>
+                </div>
+                <div class="soft">
+                    <p>Time management</p>
+                </div>
+                <div class="soft">
+                    <p>Resourceful</p>
+                </div>
+            </div>
+            <div class="technical">
+
+                <div class="tech">
+                    <h3>HTML</h3>
+                    <div class="progress-bar">
+                        <div class="progress"></div>
+                    </div>
+                </div>
+                <div class="tech">
+                    <h3>CSS</h3>
+                    <div class="progress-bar">
+                        <div class="progress"></div>
+                    </div>
+                </div>
+                <div class="tech">
+                    <h3>Design</h3>
+                    <div class="progress-bar">
+                        <div class="progress"></div>
+                    </div>
+                </div>
+                <div class="tech">
+                    <h3>Mhotoshop</h3>
+                    <div class="progress-bar">
+                        <div class="progress"></div>
+                    </div>
+                </div>
+                <div class="tech">
+                    <h3>Marketing</h3>
+                    <div class="progress-bar">
+                        <div class="progress"></div>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <section id="Qualification">
+            <div class="main-subject">
+                <h1>Qualification</h1>
+            </div>
+
+            <div class="quali">
+                <div class="unv-img">
+                    <div class="unv">
+
+                    </div>
+                </div>
+                <div class="des">
+                    <h3><b>Bachelor's degree in Computer Science</b><br>
+                        Irbid National University</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente animi laboriosam voluptas
+                        doloribus? Aperiam, doloribus?</p>
+                </div>
             </div>
         </section>
     </main>
