edit index.html and main.scss

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a href="#About">About</a>
                     <a href="#Skills">Skills</a>
                     <a href="#Qualification">Qualification</a>
-                    <a href="#">Certificate</a>
+                    <a href="#Certificate">Certificate</a>
                     <a href="#">Contact Me</a>
                 </div>
             </div>
@@ -45,7 +45,7 @@
                 <li><a href="#About"> About</a></li>
                 <li><a href="#Skills">Skills</a></li>
                 <li><a href="#Qualification">Qualification</a></li>
-                <li><a href="#">Certificate</a></li>
+                <li><a href="#Certificate">Certificate</a></li>
                 <li><a href="#">Contact Me</a></li>
             </ul>
         </nav>
@@ -129,8 +129,22 @@
                 <div class="des">
                     <h3><b>Bachelor's degree in Computer Science</b><br>
                         Irbid National University</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sapiente animi laboriosam voluptas
-                        doloribus? Aperiam, doloribus?</p>
+                    <p>Bachelor's degree in Computer Science with a very
+                        good average (83.1) (2018 - 2021) </p>
+                </div>
+            </div>
+        </section>
+        <section id="Certificate">
+            <div class="main-subject">
+                <h1>Certificate</h1>
+            </div>
+            <div class="certificate">
+                <div class="company-img">
+
+                </div>
+                <div class="des">
+                    <h3>Orange Coding Acadmy </h3>
+                    <p> Fullstack Web Devolper and Soft Skills </p>
                 </div>
             </div>
         </section>
