--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto+Slab&family=Smooch+Sans:wght@100;500;600;900&display=swap"
         rel="stylesheet">
+
 </head>
 
 <body>
-
     <main>
         <section id="Home">
             <div class="img">
@@ -33,7 +33,7 @@
                     <a href="#Skills">Skills</a>
                     <a href="#Qualification">Qualification</a>
                     <a href="#Certificate">Certificate</a>
-                    <a href="#">Contact Me</a>
+                    <a href="#Countact-me">Contact Me</a>
                 </div>
             </div>
         </section>
@@ -46,73 +46,63 @@
                 <li><a href="#Skills">Skills</a></li>
                 <li><a href="#Qualification">Qualification</a></li>
                 <li><a href="#Certificate">Certificate</a></li>
-                <li><a href="#">Contact Me</a></li>
+                <li><a href="#Countact-me">Contact Me</a></li>
             </ul>
         </nav>
         <section id="About">
             <div class="text">
                 <h1> About Me </h1>
                 <p>I am a person who has a great passion for learning programming from a young age and my life's dream
-                    is to be a great programmer.</p>
+                    is to be a great programmer. <br><br>Full Name :<br> Abd-alrhman Jmal Ahmad Khashashneh <br><br>
+                    Birth
+                    Day :
+                    1998/12/19
+                    <br>
+                    <br> <b>Language </b>
+                    <br> <br> Arabic , English
+                </p>
             </div>
             <div class="img2">
 
             </div>
         </section>
+
         <section id="Skills">
             <div class="main-subject">
                 <h1>Skills</h1>
             </div>
-            <div class="soft-skills">
-                <div class="soft">
-                    <p>team work</p>
-                </div>
-                <div class="soft">
-                    <p>ORGANIZATION</p>
-                </div>
-                <div class="soft">
-                    <p>Fixable</p>
-                </div>
-                <div class="soft">
-                    <p>Time management</p>
-                </div>
-                <div class="soft">
-                    <p>Resourceful</p>
-                </div>
-            </div>
-            <div class="technical">
+            <div class="con">
+                <div class="oft">
+                    <h3 class="bg"> Soft Skills </h3>
+                    <div class="soft-skills">
+                        <div class="soft">
+                            <p>team work</p>
+                        </div>
+                        <div class="soft">
+                            <p>ORGANIZATION</p>
+                        </div>
+                        <div class="soft">
+                            <p>Fixable</p>
+                        </div>
+                        <div class="soft">
+                            <p>Time management</p>
+                        </div>
+                        <div class="soft">
+                            <p>Resourceful</p>
+                        </div>
+                    </div>
 
-                <div class="tech">
-                    <h3>HTML</h3>
-                    <div class="progress-bar">
-                        <div class="progress"></div>
+                </div>
+                <div class="technical">
+                    <h3 class="bg">Technical Skills </h3>
+                    <div class="tech">
+                        <h3>HTML</h3>
+                        <h3>CSS</h3>
+                        <h3>Design</h3>
+                        <h3>Photoshop</h3>
+                        <h3>Marketing</h3>
                     </div>
                 </div>
-                <div class="tech">
-                    <h3>CSS</h3>
-                    <div class="progress-bar">
-                        <div class="progress"></div>
-                    </div>
-                </div>
-                <div class="tech">
-                    <h3>Design</h3>
-                    <div class="progress-bar">
-                        <div class="progress"></div>
-                    </div>
-                </div>
-                <div class="tech">
-                    <h3>Mhotoshop</h3>
-                    <div class="progress-bar">
-                        <div class="progress"></div>
-                    </div>
-                </div>
-                <div class="tech">
-                    <h3>Marketing</h3>
-                    <div class="progress-bar">
-                        <div class="progress"></div>
-                    </div>
-                </div>
-
             </div>
         </section>
         <section id="Qualification">
@@ -151,7 +141,49 @@
     </main>
 
     <footer>
+        <div class="refernce">
+            <div class="refernce1">
+                <div class="img-triner">
 
+                </div>
+                <div class="countact">
+
+                    <h3>Name of refernce </h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga dolorum quo quos labore velit
+                        provident.</p>
+
+                </div>
+
+            </div>
+            <div class="refernce2">
+                <div class="img-triner">
+
+                </div>
+                <div class="countact">
+
+                    <h3>Name of refernce </h3>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga dolorum quo quos labore velit
+                        provident.</p>
+
+                </div>
+
+            </div>
+        </div>
+
+        <div class="countact-me" id="Countact-me">
+            <h1>Contact Me :</h1>
+            <div class="soial-media">
+                <a href="https://www.facebook.com/profile.php?id=100002258204135"><i class="fa-brands fa-facebook"> </i>
+                    Facebook</a>
+                <a href="https://www.instagram.com/aboodkh9998/"><i class="fa-brands fa-instagram-square"></i> Instgram
+                </a>
+                <a
+                    href="https://www.linkedin.com/in/%D8%B9%D8%A8%D8%AF%D8%A7%D9%84%D8%B1%D8%AD%D9%85%D9%86-%D8%AE%D8%B4%D8%A7%D8%B4%D9%86%D9%87-018778207/">
+                    <i class="fa-brands fa-linkedin"></i> Linked in</a>
+                <a href="https://github.com/Abdalrhmankhashashneh"><i class="fa-brands fa-github"></i> Git hub</a>
+                <a href=""><i class="fa-solid fa-phone"></i> + ( 962 ) 778091876</a>
+            </div>
+        </div>
     </footer>
     <script src="https://kit.fontawesome.com/93a826d4da.js" crossorigin="anonymous"></script>
 </body>
