--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
         <section id="Skills">
             <div class="main-subject">
-                <h1>Skills</h1>
+
             </div>
             <div class="con">
                 <div class="oft">
@@ -96,11 +96,14 @@
                 <div class="technical">
                     <h3 class="bg">Technical Skills </h3>
                     <div class="tech">
-                        <h3>HTML</h3>
-                        <h3>CSS</h3>
-                        <h3>Design</h3>
-                        <h3>Photoshop</h3>
-                        <h3>Marketing</h3>
+                        <h3><i class="fa-brands fa-html5"></i> HTML</h3>
+                        <h3><i class="fa-brands fa-css3"></i> CSS</h3>
+                        <h3><i class="fa-brands fa-sass"></i> SASS</h3>
+                        <h3><i class="fa-solid fa-palette"></i> Photoshop</h3>
+                        <h3><i class="fa-solid fa-circle-c"></i> C++</h3>
+                        <h3><i class="fa-duotone fa-frame"></i> C#</h3>
+                        <h3><i class="fa-brands fa-python"></i> Python</h3>
+                        <h3><i class="fa-brands fa-java"></i> java</h3>
                     </div>
                 </div>
             </div>
@@ -148,7 +151,7 @@
                 </div>
                 <div class="countact">
 
-                    <h3>Name of refernce </h3>
+                    <h3 class="b">Name of refernce </h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga dolorum quo quos labore velit
                         provident.</p>
 
@@ -161,7 +164,7 @@
                 </div>
                 <div class="countact">
 
-                    <h3>Name of refernce </h3>
+                    <h3 class="b">Name of refernce </h3>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga dolorum quo quos labore velit
                         provident.</p>
 
