--- a/index.html
+++ b/index.html
@@ -151,9 +151,10 @@
                 </div>
                 <div class="countact">
 
-                    <h3 class="b">Name of refernce </h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga dolorum quo quos labore velit
-                        provident.</p>
+                    <h3 class="b">Hala Hamdan </h3>
+                    <p>full stack web development <br> trainer @ Orange coding academy <br> hala.ali.hamdan@gmail.com
+                        <br> 0776802579
+                    </p>
 
                 </div>
 
@@ -164,9 +165,8 @@
                 </div>
                 <div class="countact">
 
-                    <h3 class="b">Name of refernce </h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fuga dolorum quo quos labore velit
-                        provident.</p>
+                    <h3 class="b">Hala Obeidat. </h3>
+                    <p>Job Coach at Orange Coding Academy.<br> hala_12_6@yahoo.com <br> 0776809087 </p>
 
                 </div>
 
